--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,8 @@ jobs:
         run: npm install
       - name: setup Latest Chrome Driver
         run: npm run chromeDriverUpdate
+      - name: install chromedriver version 109
+        run: npm i chromedriver@109 --save -dev
       - name: Executing the Test Scripts
         run: npm run makeMyTrip  
 
