--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run wdio
+    - run: npm run makeMyTrip
     - name: Install allure commandline
       if: success() || failure()
       run: npm i -g allure-commandline
