--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: install chromedriver latest version
+      run: npm i chromedriver@109 --save -dev
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run makeMyTrip
