--- a/package.json
+++ b/package.json
@@ -1,39 +1,50 @@
 {
-    "name": "webdriverio-tests",
-    "version": "0.1.0",
-    "private": true,
-    "devDependencies": {
-        "@wdio/allure-reporter": "^7.16.14",
-        "@wdio/cli": "^7.16.16",
-        "@wdio/devtools-service": "^8.0.0",
-        "@wdio/jasmine-framework": "^7.16.11",
-        "@wdio/local-runner": "^7.16.16",
-        "@wdio/spec-reporter": "^7.16.14",
-        "allure-commandline": "^2.17.2",
-        "chromedriver": "^113.0.0",
-        "moment-timezone": "^0.5.34",
-        "wdio-chromedriver-service": "^8.0.0",
-        "wdio-wait-for": "^2.2.1"
-    },
-    "scripts": {
-        "chromeDriverUpdate": "npm install chromedriver --chromedriver_version=LATEST",
-        "makeMyTrip": "wdio run wdio.conf.js",
-        "allureCombine": "node ./node_modules/allure-single-html-file-js/combine.js ./test/.artifacts/allure-report",
-        "openReport": "allure open test/.artifacts/allure-report"
-    },
-    "prettier": {
-        "printWidth": 200,
-        "tabWidth": 4,
-        "useTabs": true,
-        "semi": true,
-        "singleQuote": true,
-        "quoteProps": "consistent",
-        "trailingComma": "es5",
-        "bracketSpacing": false,
-        "arrowParens": "avoid"
-    },
-    "dependencies": {
-        "allure-single-html-file-js": "^0.0.3",
-        "log-to-file": "^3.0.0"
-    }
+	"name": "webdriverio-tests",
+	"version": "0.1.0",
+	"private": true,
+	"devDependencies": {
+		"@wdio/allure-reporter": "^8.10.0",
+		"@wdio/cli": "^8.11.2",
+		"@wdio/jasmine-framework": "^8.11.2",
+		"@wdio/local-runner": "^8.11.2",
+		"@wdio/selenium-standalone-service": "^8.11.0",
+		"@wdio/spec-reporter": "^8.11.2",
+		"allure-single-html-file-js": "^0.0.4",
+		"chromedriver": "^113.0.0",
+		"html-reporter": "^9.9.1",
+		"husky": "^3.1.0",
+		"moment-timezone": "^0.5.43",
+		"prettier": "^2.8.8",
+		"pretty-quick": "^3.1.3",
+		"wdio-chromedriver-service": "^8.1.1"
+	},
+	"scripts": {
+		"allureCombine": "node ./node_modules/allure-single-html-file-js/combine.js ./test/.artifacts/allure-report",
+		"test": "wdio run wdio.conf.js",
+		"testEdge": "wdio run edge_config.js",
+		"openReport": "allure open test/.artifacts/allure-report"
+	},
+	"dependencies": {
+		"allure-commandline": "^2.18.1",
+		"allure-single-html-file-js": "^0.0.4",
+		"npm-check-updates": "^16.10.12",
+		"pdf-parse": "^1.1.1",
+		"wdio-html-nice-reporter": "^8.1.0"
+	},
+	"prettier": {
+		"printWidth": 200,
+		"tabWidth": 4,
+		"useTabs": true,
+		"semi": true,
+		"singleQuote": true,
+		"quoteProps": "consistent",
+		"trailingComma": "es5",
+		"bracketSpacing": false,
+		"arrowParens": "avoid"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "pretty-quick --staged"
+		}
+	}
 }
