--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"allure-single-html-file-js": "^0.0.4",
 		"npm-check-updates": "^16.10.12",
 		"pdf-parse": "^1.1.1",
-		"wdio-html-nice-reporter": "^8.1.0"
+		"wdio-html-nice-reporter": "^8.1.0",
+		"log-to-file": "^3.0.0"
 	},
 	"prettier": {
 		"printWidth": 200,
