--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Use Node.js
               uses: actions/setup-node@v3
               with:
-                  node-version: 18.x
+                  node-version: 19.0.0
                   cache: npm
             - name: Checkout code
               uses: actions/checkout@v2
