--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -25,13 +25,13 @@ jobs:
         uses: LambdaTest/LambdaTest-tunnel-action@v1 # Uses an action in the root directory
         with:
           user: ${{ secrets.LT_EMAIL }}
-          accessKey: Royal_7075
+          accessKey: ${{ secrets.LT_ACCESS_KEY }}
           tunnelName: "test tunnel"
 
       - name: Run Test Case
         env:
           username: ${{ secrets.LT_USERNAME }}
-          accessKey: Royal_7075
+          accessKey: ${{ secrets.LT_ACCESS_KEY }}
           tunnelName: "test tunnel"
 
         run: npm run test
