--- a/.github/workflows/lamada_test.yml
+++ b/.github/workflows/lamada_test.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run Test Case
         env:
-          username: LT_USERNAME
+          username: LT_ACCESS_KEY
           accessKey: Royal_7075
           tunnelName: "test tunnel"
 
