--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -15,7 +15,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 18.16.0
-      - run: npm install
+      - run: npm install yarn
+      
+      - name: Install yarn
+      - run: npm install 
 
       - name: Make curl request
         run: curl -s --retry-connrefused --connect-timeout 5 --max-time 5 --retry 30 --retry-delay 2 --retry-max-time 60 http://example.com/api/v1/info
