--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -27,14 +27,14 @@ jobs:
         uses: LambdaTest/LambdaTest-tunnel-action@v1 # Uses an action in the root directory
         with:
           user: ${{ secrets.LT_EMAIL }}
-          accessKey: ${{ secrets.LT_ACCESS_KEY }}
+          accessKey: Royal_7075
           tunnelName: "test tunnel"
         
       - name: Run Test Case
         if: always()
         env:
           username: ${{ secrets.LT_USERNAME }}
-          accessKey: ${{ secrets.LT_ACCESS_KEY }}
+          accessKey: Royal_7075
           tunnelName: "test tunnel"
 
         run: npm run test
