--- a/.github/workflows/lamada_test.yml
+++ b/.github/workflows/lamada_test.yml
@@ -1,7 +1,7 @@
 name: Test Tunnel
 
 on:
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   test-tunnel:
@@ -11,28 +11,28 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v1
 
-      - name: Install Node.js, NPM and Yarn
+      - name: Install Node.js and NPM
         uses: actions/setup-node@v1
         with:
           node-version: 18.16.0
-      - run: npm install yarn
+
       - run: npm install
 
       - name: Start LambdaTest Tunnel
         id: tunnel
         uses: LambdaTest/LambdaTest-tunnel-action@v1
         with:
-         user: LT_EMAIL
-         accessKey: Mavens_7075
-         tunnelName: "test tunnel"
-         tunnelArgs: "--port 33429"
-         
+          user: vishnu.prasad@testingmavens.com
+          accessKey: 3ALej2bmjlQrAJ86GODrvbYv93MppMUVJ0XNV9DGfGhn3wn72R
+          tunnelName: "test tunnel"
+          tunnelArgs: "--port 33429"
+
       - name: Run Test Case
         env:
-         LT_USERNAME: LT_ACCESS_KEY
-         LT_ACCESS_KEY: Royal_7075
-         LT_TUNNEL_NAME: "test tunnel"
-         run: npm run test
+          LT_USERNAME: Royal_7075
+          LT_ACCESS_KEY: Mavens_7075
+          LT_TUNNEL_NAME: "test tunnel"
+        run: npm run test
 
       - name: Export Tunnel Logs for debugging
         uses: actions/upload-artifact@v2
